--- a/quizzeess/src/styles/globals.css
+++ b/quizzeess/src/styles/globals.css
@@ -16,6 +16,7 @@
 
 body {
   font-family: Arial, Helvetica, sans-serif;
+  background-color: #ebefff;
 }
 
 @layer base {
@@ -26,7 +27,7 @@ body {
     --card-foreground: 0 0% 3.9%;
     --popover: 0 0% 100%;
     --popover-foreground: 0 0% 3.9%;
-    --primary: 0 0% 9%;
+    --primary: red;
     --primary-foreground: 0 0% 98%;
     --secondary: 0 0% 96.1%;
     --secondary-foreground: 0 0% 9%;
